--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,13 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #0b838b;
-  --ifm-color-primary-dark: #0a767d;
-  --ifm-color-primary-darker: #096f76;
-  --ifm-color-primary-darkest: #085c61;
-  --ifm-color-primary-light: #0c9099;
-  --ifm-color-primary-lighter: #0d97a0;
-  --ifm-color-primary-lightest: #0eaab5;
+  --ifm-color-primary: #147ddd;
+  --ifm-color-primary-dark: #1270c7;
+  --ifm-color-primary-darker: #116abc;
+  --ifm-color-primary-darkest: #0e579b;
+  --ifm-color-primary-light: #1e89eb;
+  --ifm-color-primary-lighter: #298fec;
+  --ifm-color-primary-lightest: #4ba0ef;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
