--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,13 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #147ddd;
-  --ifm-color-primary-dark: #1270c7;
-  --ifm-color-primary-darker: #116abc;
-  --ifm-color-primary-darkest: #0e579b;
-  --ifm-color-primary-light: #1e89eb;
-  --ifm-color-primary-lighter: #298fec;
-  --ifm-color-primary-lightest: #4ba0ef;
+  --ifm-color-primary: #145ddd;
+  --ifm-color-primary-dark: #1254c7;
+  --ifm-color-primary-darker: #114fbc;
+  --ifm-color-primary-darkest: #0e419b;
+  --ifm-color-primary-light: #1e69eb;
+  --ifm-color-primary-lighter: #2970ec;
+  --ifm-color-primary-lightest: #4b86ef;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
